<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/hideNavigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:onClick="HideNavigation"
        />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/backbutton"
        android:onClick="onClickButtonBack"
        android:contentDescription="@string/sorry" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/textMusic"
                style="@style/MenuStyle"
                android:text="@string/settingsmusic"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/MusicOnOff"
                style="@style/MenuStyle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textMusic"
                android:onClick="onClickMusic"
                android:text="@string/MusicOn"
                android:textColor="@color/OnGreenColor" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textSound"
                style="@style/MenuStyle"
                android:text="@string/settingssound"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/SoundOnOff"
                style="@style/MenuStyle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textSound"

                android:textColor="@color/OnGreenColor"
                android:text="@string/SoundOn"
                android:onClick="onClickSound"/>

        </RelativeLayout>



    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>